--- a/langsung/sonys2.html
+++ b/langsung/sonys2.html
@@ -16,8 +16,7 @@ video {
     <video controls crossorigin playsinline >
       <source 
         type="application/x-mpegURL" 
-        src="https://dai.google.com/linear/hls/event/LK-ik89MQIi_pWBbg74KNQ/master.m3u8"
-      >
+        src="https://dai.google.com/linear/hls/event/LK-ik89MQIi_pWBbg74KNQ/master.m3u8"></source>
     </video>
   </div>
 <script>
