--- a/langsung/ssport2.html
+++ b/langsung/ssport2.html
@@ -6,7 +6,7 @@
     <video controls crossorigin playsinline >
       <source 
         type="application/x-mpegURL" 
-        src="https://dai.google.com/linear/hls/event/LK-ik89MQIi_pWBbg74KNQ/master.m3u8"
+        src="https://d30aylox5wvifh.cloudfront.net/event/smil:ag6/playlist.m3u8"
       >
     </video>
   </div>
